# gpt_python_deployment_example

./: Dockerfile  README.md  app.py  pyproject.toml
