[tool.poetry]
name = "cocktail-model-py"
version = "0.1.0"
description = "ML Deployment example"
authors = ["Brian Czaicki <brian.czaicki@afterpay.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
torchtext = "^0.15.2"
transformers = "^4.38.2"
sentencepiece = "^0.2.0"
pandas = "^2.2.1"
tqdm = "^4.66.2"
datasets = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
